// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text with Icon renders a text with icon with icon at end 1`] = `
<div
  data-testid="text-with-icon"
  style="display: flex; padding: 5px; align-items: center;"
>
  <div
    class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
  >
    Some Text
  </div>
  <img
    alt="icon"
    src="/res/icons/user.png"
    style="margin-right: 5px; height: 20px; width: 15px; padding-left: 10px;"
  />
</div>
`;

exports[`Text with Icon renders a text with icon with icon at start 1`] = `
<div
  data-testid="text-with-icon"
  style="display: flex; padding: 5px; align-items: center;"
>
  <img
    alt="icon"
    src="/res/icons/user.png"
    style="margin-right: 5px; height: 20px; width: 15px;"
  />
  <div
    class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
  >
    Some Text
  </div>
</div>
`;
